# shovel

./: .gitignore  README.md  multi_docker_eval_python.jsonl  pyproject.toml
shovel/: __init__.py  __main__.py  agent.py  cli.py  prompt.py  utils.py
